<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Referee</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="createscoreboard">Create Scoreboard</string>
    <string name="viewsavedgames">View Saved Scores</string>

    <color name="black">#000000</color>

    <string name="testing">testing</string>
    <string name="resumegame">Resume Current Game</string>
    <string name="selectscoreboard">Select Scoreboard</string>
    <string name="viewscores">View Scores</string>
    <string name="createtournament">Create Tournament</string>
    <string name="option">Options</string>
    <string name="testbuttonpress">Testing Button Press</string>

    <color name="red">#FF0000</color>
    <color name="blue">#0000FF</color>
    <color name="green">#00FF00</color>
    <color name="white">#FFFFFF</color>

    <string name="scoreboard">scoreboard</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_scoreboard1">Scoreboard1</string>
    <string name="title_activity_scoreboard_ui">ScoreboardUI</string>
    <string name="tNames">tNames</string>
    <string name="bNames">bNames</string>
    <string name="End">End</string>
    <string name="Options">Options</string>
    <string name="Rules">Rules</string>
    <string name="Home">Home</string>
    <string name="title_activity_scoreboard_list">ScoreboardList</string>
    <string name="title_activity_score_list">ScoreList</string>
    <string name="title_activity_rule_sheet">RuleSheet</string>
    <string name="title_activity_game_options">GameOptions</string>
    <string name="Create">CREATE</string>
    <string name="Continue">CONTINUE</string>
    <string name="Scores">SCORES</string>
    <string name="Play">PLAY</string>
    <string name="Referee">Referee</string>
    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_input_menu">InputMenu</string>
    <string name="title_activity_name_teams">NameTeams</string>
    <string name="title_activity_spinner_and_dialog">SpinnerAndDialog</string>
    <string name="title_activity_create_tournament">CreateTournament</string>
    <string name="title_activity_tournament">Tournament</string>

</resources>
